objects/css_header_nav__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Setting for determining header Navigation</description>
    <fields>
        <fullName>AddNotesTechDisable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To disable Add Notes functionality to Technician profile.</description>
        <label>AddNotesTechDisable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssignJobFunc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To provide assign job functionality access</description>
        <label>AssignJobFunc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssignJobReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Assigned component to display in Read Only mode</description>
        <label>AssignJobReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMSSearchPopFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BMSSearchPopFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CG_Invoice_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CG_Invoice_Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_dealerActnMsg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Displaying Action Message.</description>
        <label>CSS_dealerActnMsg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSS_distriActnMsg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSS_distriActnMsg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampReviewedRO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To disable Technician check if reviewed / performed check boxes.</description>
        <label>CampReviewedRO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClaimsLink__c</fullName>
        <description>Navigate to Myclaims Page</description>
        <label>ClaimsLink</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreateJobFunc__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To provide create job functionality to profiles.</description>
        <label>CreateJobFunc</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_DataExchangeButton__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to display Data Exchange Screens only to DataExchange Admin and System Administrator Profiles</description>
        <label>Dealer_DataExchangeButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnableBMSButton__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EnableSendToBMSButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EnablePeersSharing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables peers sharing.. example shares Jobs created by an Advanced user to other Advanced user at the same location.</description>
        <label>EnablePeersSharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Content_Access_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This fields is to enable content link to the profiles .</description>
        <label>Enable Content Access Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HomeLink__c</fullName>
        <description>Link to respective Home Page</description>
        <label>HomeLink</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IntakeNotesEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To provide intake notes edit functionality.</description>
        <label>IntakeNotesEdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IntakeNotesReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To provide Intake notes readonly access</description>
        <label>IntakeNotesReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsQuoteEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsQuoteEnabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobLink__c</fullName>
        <description>Job Page Link</description>
        <label>JobLink</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nav_Name__c</fullName>
        <description>Name of the Navigation element</description>
        <label>Nav Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSWButtonEnable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Enable RSW Button in Repair Review and Warranty Control Number in Job Overview section.</description>
        <label>RSWButtonEnable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TnDNotesEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To provide access to TnD Notes Edit functionality</description>
        <label>TnDNotesEdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TnDNotesReadonly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To provide TnD notes Readonly access.</description>
        <label>TnDNotesReadonly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_Link__c</fullName>
        <label>Warranty Link</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>btnJobFinishedCanceled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Render &quot;Job is Finished or Canceled - Save &amp; Close&quot; button</description>
        <label>btnJobFinishedCanceled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pnlCustomerEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To render editable Customer panel.</description>
        <label>pnlCustomerEdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pnlCustomerReadOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To render Read only customer panel</description>
        <label>pnlCustomerReadOnly</label>
        <type>Checkbox</type>
    </fields>
    <label>css header nav</label>
    <listViews>
        <fullName>CMI_View</fullName>
        <columns>AddNotesTechDisable__c</columns>
        <columns>AssignJobFunc__c</columns>
        <columns>AssignJobReadOnly__c</columns>
        <columns>btnJobFinishedCanceled__c</columns>
        <columns>CampReviewedRO__c</columns>
        <columns>CreateJobFunc__c</columns>
        <columns>EnablePeersSharing__c</columns>
        <columns>IntakeNotesEdit__c</columns>
        <columns>IntakeNotesReadOnly__c</columns>
        <columns>pnlCustomerEdit__c</columns>
        <columns>pnlCustomerReadOnly__c</columns>
        <columns>RSWButtonEnable__c</columns>
        <columns>TnDNotesEdit__c</columns>
        <columns>ClaimsLink__c</columns>
        <columns>Warranty_Link__c</columns>
        <filterScope>Everything</filterScope>
        <label>CMI View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>IAM_Profile</fullName>
        <columns>NAME</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>SETUP_TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Profile</label>
        <language>en_US</language>
    </listViews>
</CustomObject>